--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
         </div>
         <nav>
-          <a href="../index.html" class="nav-link">Inicio</a>
-          <a href="../pages/nosotros.html" class="nav-link">Nosotros</a>
-          <a href="../pages/publicareventos.html" class="nav-link">Publicar Eventos</a>
-          <a href="../pages/login.html" class="nav-link">Login</a>
-          <a href="../pages/register.html" class="nav-link">Register</a>
+          <a href="./index.html" class="nav-link">Inicio</a>
+          <a href="./pages/nosotros.html" class="nav-link">Nosotros</a>
+          <a href="./pages/publicareventos.html" class="nav-link">Publicar Eventos</a>
+          <a href="./pages/login.html" class="nav-link">Login</a>
+          <a href="./pages/register.html" class="nav-link">Register</a>
           <a href="./pages/eventos.html" class="nav-link">Eventos</a>
 <nav>
 
