--- a/pages/register.html
+++ b/pages/register.html
@@ -3,6 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="venta de entradas, entradas online, comprar tickets, fiestas, eventos, Passline, diversión, ocio">
+    <meta name="author" content="Passline">
+    <meta name="robots" content="index, follow">
+    <meta name="revisit-after" content="7 days">
+    <meta name="language" content="es">
+    <meta name="geo.region" content="ES">
+    <meta name="geo.placename" content="Argentina">
+    <meta property="og:title" content="PartyPass - Venta de entradas online para fiestas y eventos">
+    <meta property="og:description" content="Registro">
+    <meta property="og:url" content="partypass.com">
+    <meta property="og:image" content="logo.png">
+    <meta property="og:type" content="website">
     <title>Formulario</title>
     <link rel="stylesheet" href="../styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
