--- a/pages/eventos.html
+++ b/pages/eventos.html
@@ -3,6 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="venta de entradas, entradas online, comprar tickets, fiestas, eventos, Passline, diversión, ocio">
+    <meta name="author" content="Passline">
+    <meta name="robots" content="index, follow">
+    <meta name="revisit-after" content="7 days">
+    <meta name="language" content="es">
+    <meta name="geo.region" content="ES">
+    <meta name="geo.placename" content="Argentina">
+    <meta property="og:title" content="PartyPass - Venta de entradas online para fiestas y eventos">
+    <meta property="og:description" content="Elige entre distintos eventos">
+    <meta property="og:url" content="partypass.com">
+    <meta property="og:image" content="logo.png">
+    <meta property="og:type" content="website">
     <title>Eventos</title>
     <link rel="stylesheet" href="../styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -15,14 +29,14 @@
         </div>
         <nav>
             <a href="../index.html" class="nav-link">Inicio</a>
-            <a href="#" class="nav-link">Nosotros</a>
+            <a href="../pages/nosotros.html" class="nav-link">Nosotros</a>
             <a href="../pages/publicareventos.html" class="nav-link">Publicar Eventos</a>
             <a href="../pages/login.html" class="nav-link">Login</a>
             <a href="../pages/register.html" class="nav-link">Register</a>
             <a href="../pages/register.html" class="nav-link">Eventos</a>
         </nav>
     </header>
-       <main>
+  <main>
 <div class="bg-white">
     <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
       <h1 class="sr-only">Proximos Eventos!</h1>
@@ -57,14 +71,14 @@
           <p class="mt-1 text-lg font-medium text-gray-900">$35</p>
         </a>
   
-        <!-- More products... -->
+
       </div>
     </div>
   </div>
   
   
-       </main>
-       <footer>
+        </main>
+        <footer>
         <div class="relative isolate overflow-hidden bg-gray-900 py-16 sm:py-24 lg:py-32">
             <div class="mx-auto max-w-7xl px-6 lg:px-8">
                 <div class="mx-auto grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 lg:max-w-none lg:grid-cols-2">
