--- a/pages/login.html
+++ b/pages/login.html
@@ -11,7 +11,7 @@
     <meta name="geo.region" content="ES">
     <meta name="geo.placename" content="Argentina">
     <meta property="og:title" content="PartyPass - Venta de entradas online para fiestas y eventos">
-    <meta property="og:description" content="Compra tus entradas online para las mejores fiestas y eventos. Passline te ofrece un servicio rápido y seguro para que disfrutes de tus eventos favoritos.">
+    <meta property="og:description" content="Login">
     <meta property="og:url" content="partypass.com">
     <meta property="og:image" content="logo.png">
     <meta property="og:type" content="website">
