--- a/pages/register.html
+++ b/pages/register.html
@@ -35,6 +35,8 @@
     <a href="../pages/publicareventos.html" class="nav-link">Publicar Eventos</a>
     <a href="../pages/login.html" class="nav-link">Login</a>
     <a href="../pages/register.html" class="nav-link">Register</a>
+
+    <a href="../pages/eventos.html" class="nav-link">Eventos</a>
         </header>
     
 <form class="esel2">
